[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/Textures_v2/craft/enchant/button_item_default.png" type="Texture" id=1]
[ext_resource path="res://assets/Textures_v2/icon_question_small.png" type="Texture" id=2]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO/loyalty/frame_trainings_hover.png" type="Texture" id=3]
[ext_resource path="res://assets/Textures_v2/CLASS_INFO/Skills Icons/icon_magicdamage.png" type="Texture" id=4]
[ext_resource path="res://assets/Textures_v2/CLASS_INFO/Skills Icons/icon_magicdamage_pressed.png" type="Texture" id=5]
[ext_resource path="res://gui_modules/CharacterInfo/SUpgradesList.gd" type="Script" id=6]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO/loyalty/frame_trainings.png" type="Texture" id=7]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/NS_36.tres" type="DynamicFont" id=8]
[ext_resource path="res://assets/Fonts_v2/FontThemes/MainMiddle.tres" type="DynamicFont" id=9]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO/loyalty/frame_trainings_disabled.png" type="Texture" id=10]
[ext_resource path="res://assets/images/gui/upgrades/alchemy.png" type="Texture" id=11]
[ext_resource path="res://assets/Textures_v2/Upgrades/panel_upgradetree_back.png" type="Texture" id=12]
[ext_resource path="res://assets/Textures_v2/CLASS_INFO/Skills Icons/icon_magicdamage_hover.png" type="Texture" id=13]
[ext_resource path="res://assets/images/gui/panels/hourglass.png" type="Texture" id=14]
[ext_resource path="res://assets/Textures_v2/craft/enchant/button_item_prassed.png" type="Texture" id=15]
[ext_resource path="res://assets/Textures_v2/craft/enchant/button_item_hover.png" type="Texture" id=16]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/PT_24.tres" type="DynamicFont" id=17]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/PT_18.tres" type="DynamicFont" id=18]
[ext_resource path="res://assets/images/iconsskills/Charm.png" type="Texture" id=19]
[ext_resource path="res://assets/Textures_v2/Tattoo/frame_tattoo_disabled.png" type="Texture" id=20]

[node name="UpgradesList" type="Control"]
margin_right = 760.0
margin_bottom = 740.0
rect_min_size = Vector2( 700, 724 )
script = ExtResource( 6 )

[node name="info" type="Control" parent="."]
margin_left = 2.0
margin_top = 25.0
margin_right = 296.0
margin_bottom = 462.0

[node name="VBoxContainer" type="VBoxContainer" parent="info"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -29.0
margin_right = -29.0
margin_bottom = -7.0

[node name="record" type="HBoxContainer" parent="info/VBoxContainer"]
visible = false
margin_right = 294.0
margin_bottom = 35.0
rect_pivot_offset = Vector2( -824, -22 )

[node name="stat" type="Label" parent="info/VBoxContainer/record"]
margin_right = 218.0
margin_bottom = 35.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 9 )
text = "Current Personality"

[node name="value" type="Label" parent="info/VBoxContainer/record"]
margin_left = 222.0
margin_right = 294.0
margin_bottom = 35.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 9 )
text = "0"
align = 2

[node name="separator" type="Label" parent="info/VBoxContainer"]
visible = false
margin_right = 294.0
margin_bottom = 440.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 9 )
align = 2

[node name="spells" type="TextureButton" parent="info"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -105.0
margin_top = -103.0
margin_right = -6.0
margin_bottom = -4.0
hint_tooltip = "SPELLCAST_LABEL"
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 13 )
expand = true

[node name="upgrades" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -458.0
margin_top = 24.0
margin_right = -16.0
margin_bottom = 464.0

[node name="Button" type="TextureButton" parent="upgrades"]
visible = false
margin_left = 2.0
margin_top = -1.0
margin_right = 102.0
margin_bottom = 129.0
shortcut_in_tooltip = false
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 10 )
stretch_mode = 5

[node name="bg" type="TextureRect" parent="upgrades/Button"]
modulate = Color( 0.415686, 0.462745, 0.764706, 1 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -32.0
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="upgrades/Button"]
margin_left = 6.0
margin_top = 5.0
margin_right = 92.0
margin_bottom = 91.0
texture = ExtResource( 11 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="upgrades/Button"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = 28.0
grow_horizontal = 2
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 18 )
text = "Luxury rooms"
align = 1
valign = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cost" type="Label" parent="upgrades/Button"]
margin_left = 5.62997
margin_top = 95.9603
margin_right = 94.63
margin_bottom = 127.96
custom_fonts/font = ExtResource( 17 )
text = "100"
align = 1
valign = 1

[node name="thralls" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -171.0
rect_pivot_offset = Vector2( -486, -382 )

[node name="Label2" type="Label" parent="thralls"]
anchor_right = 1.0
margin_bottom = 53.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 8 )
text = "SIBLINGMODULETHRALLLIST"
align = 1
clip_text = true

[node name="HBoxContainer" type="HBoxContainer" parent="thralls"]
margin_left = 62.0
margin_top = 55.0
margin_right = 743.0
margin_bottom = 155.0
custom_constants/separation = 10

[node name="Button" type="TextureButton" parent="thralls/HBoxContainer"]
visible = false
margin_right = 100.0
margin_bottom = 100.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 16 )
texture_disabled = ExtResource( 1 )

[node name="icon" type="TextureRect" parent="thralls/HBoxContainer/Button"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
expand = true

[node name="ThrallsTooltip" type="TextureRect" parent="thralls"]
margin_left = 695.0
margin_top = 7.0
margin_right = 745.0
margin_bottom = 54.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="spells" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -270.0
margin_bottom = -170.0
custom_constants/separation = 10
alignment = 1

[node name="Button" type="TextureButton" parent="spells"]
visible = false
margin_left = 330.0
margin_right = 430.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 16 )
texture_disabled = ExtResource( 20 )
expand = true

[node name="icon" type="TextureRect" parent="spells/Button"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
texture = ExtResource( 19 )
expand = true

[node name="value" type="Label" parent="spells/Button"]
margin_left = 44.0
margin_top = 62.0
margin_right = 92.0
margin_bottom = 97.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.505882, 0.666667, 0.976471, 1 )
custom_fonts/font = ExtResource( 9 )
text = "10"
align = 2

[node name="value2" type="Label" parent="spells/Button"]
margin_left = 7.0
margin_top = 62.0
margin_right = 55.0
margin_bottom = 97.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.964706, 0.388235, 0.713726, 1 )
custom_fonts/font = ExtResource( 9 )
text = "10"

[node name="value3" type="Label" parent="spells/Button"]
visible = false
margin_left = 44.0
margin_top = 62.0
margin_right = 92.0
margin_bottom = 97.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = ExtResource( 9 )
text = "10"
align = 2

[node name="cdicon" type="TextureRect" parent="spells/Button"]
visible = false
margin_left = 33.0
margin_top = 66.0
margin_right = 61.0
margin_bottom = 94.0
texture = ExtResource( 14 )
expand = true

[node name="SuccubusTrainingTooltip" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -50.0
margin_top = -73.0
margin_bottom = -26.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
